Feature/cb 3 (#3)
* add meeting room feature

---------

Co-authored-by: Vadim Kurnyshov <vaku439@yahoo.com>